# ODIS

./: Readme.md  install.sh
conf/: grafana.json  ipac.conf  postgres-db.sql  rules.conf
ipac-ng/: CHANGELOG  Makefile.in  README  TODO  acconfig.h  batch.l  batch.y  conffile.l  conffile.y  config.h.in  configure  configure.in  fetchipac.8  fetchipac.c  ipac-convert  ipac-convert.8  ipac-ng.spec  ipac.h  ipacsum  ipacsum.8  ipactest.in  lock.c  mkinstalldirs  rule.c  subst-config.in  subst.c  xmalloc.c
ipac-ng/access/: Makefile.in
ipac-ng/access/files/: Makefile.in  files.c  rules.c  rules.l  rules.y
ipac-ng/agents/: Makefile.in
ipac-ng/agents/ipchains/: Makefile.in  ipchains.c
ipac-ng/agents/iptables/: Makefile.in  internal.h  iptables.c  iptables.h
ipac-ng/contrib/: INDEX  invmatch.diff
ipac-ng/contrib/crunch/: collecting-data.eml  crunch.pl
ipac-ng/contrib/ipac-2-mrtg/: README  ipac-2-mrtg  ipac-rules.conf  ipac.conf  ipaccount  mrtg.cfg
ipac-ng/contrib/ipac-ng_addsql/: README  USAGE  addsql
ipac-ng/contrib/ipac_and_mrtg/: README  ipac.conf  ipaccount  mrtg-network.cfg
ipac-ng/contrib/ipacsum-light/: README  ipacsum-light.tar
ipac-ng/contrib/ipacsum_daily_monthly/: README  ipac-ng-daily  ipacsum-daily  ipacsum-monthly  ipacsumdaily.pl  ipacsumday.pl  ipacsummonth.pl  ipacsummonthly.pl
ipac-ng/contrib/sample_configs/: friendnet  ipac.conf  rules.conf.ipchains  rules.conf.iptables
ipac-ng/doc/: BUILD-with-iptables-source  HOWTO-postgres-db  UPDATE-from-version-before-1.27  ipac.conf.sample  mysql-db.sql  postgres-db.sql  rules.conf.sample  sqlite-howto  tips-and-tricks
ipac-ng/lib/: libnet.c  libnet.h
ipac-ng/storage/: Makefile.in
ipac-ng/storage/gdbm/: Makefile.in  gdbm.c  ipac_gdbm.h
ipac-ng/storage/mysql/: Makefile.in  mysql.c  mysql_backend.h
ipac-ng/storage/plain-file/: Makefile.in  plain-file.c
ipac-ng/storage/postgre/: Makefile.in  postgre.c  postgre.h
ipac-ng/storage/sharedsql/: sharedsql.c  sharedsql.h
ipac-ng/storage/sqlite/: Makefile.in  sqlite.c
